# berkeley-equivalency

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  build_docker.sh  databasemaker.py  explore.ipynb  ivc-berkeley-ds.json  keys.json  package-lock.json  package.json  pdfgrabber.py  pyproject.toml  run_tests.sh  running.py  scraper.py  scraping.md  setup.md  tailwind.config.ts
.github/workflows/: pytest.yml  ruff.yml
app/: globals.css  layout.tsx  page.tsx
app/api/articulations/: route.ts
app/api/courses/: route.ts
components/: articulation-renderer.tsx  course-combobox.tsx
components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx
data/: assist_data.json  institutions.json  sample.json  url_manifest.json  urls.json
db/: schema.sql
docs/: ivc-berkeley-ds-test.json  ivc-berkeley-ds.json  ivc-berkeley-english.json  json_scrape_format_proposal.md  scraping.md  setup.md  url_format.md
docs/example_html/: avc_to_berk_physics.html  coastline_to_berk(multiple_ands_stacked).html  deanza_college_to_berk_econ(choose 1 from x).html  ivc_to_berk_analytics.html  ivc_to_berk_comp_sci.html
keys/: 79_CS_keys.json
lib/: supabase.ts  types.ts
src/: assist_url_generator.py  berkeley_url_generator.py  get_institution_id.py  import_normalized_to_postgres.py  json_grabber.py  main.py  normalize_jsonl_files.py  parse_json.py  response.py  run_generator.py  scraper.py  search_courses.py  timing.py
tests/: arcticRowTestData.html  expected_data.json  test_assist_url_generator.py  test_assist_url_generator_full_dataset.py  test_import_normalized_to_postgres.py  test_json_grabber.py  test_normalize_jsonl_files.py  test_parse_json.py  test_scraper.py  test_search_courses.py
tests/data/: assist_urls.txt  expected_data.json
