[project]
name = "berkeley-equivalency"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "httpx>=0.28.1",
    "lxml>=5.4.0",
    "playwright>=1.52.0",
    "requests>=2.32.3",
    "selenium>=4.33.0",
    "webdriver-manager>=4.0.2",
]
