[project]
name = "berkeley-equivalency"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "httpx>=0.28.1",
    "lxml>=5.4.0",
    "playwright>=1.52.0",
    "requests>=2.32.3",
    "selenium>=4.33.0",
    "webdriver-manager>=4.0.2",
]

[tool.ruff]
line-length = 88                    # Match Black's default
target-version = "py311"           # Set to your lowest supported Python version
include = ["src/scraper.py"]       # change this later when we delete the old refrence code

[tool.ruff.lint]
select = [
    "E",  # pycodestyle (style errors)
    "F",  # pyflakes (unused imports, undefined names)
    "B",  # bugbear (common bugs)
    "I",  # isort (import sorting)
    "UP", # pyupgrade (modernize syntax)
    "C90",# mccabe (complexity checking)
    "SIM",# simplify (suggest simpler code)
    "TID",# tidy imports (like `typing`)
    "TCH",  # type-import hygiene
    "PYI"   # type correctness checking
]

ignore = [
    "E501",  # Ignore line-too-long (if using Black)
    "B008",  # Don't warn on function default as mutable (can be noisy in tests)
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]
